# targaryen-engine

./: .gitignore  Makefile  Makefile.native  Makefile.wasm  game  meson.build
assets/: game.targ  jean.json  pirates.json  pirates.tmx
assets.old/: jean.json  pirates.tmx
assets/metroidvania/game.targ/: app.json  global.json
assets/rpg.targ/: app.json  global.json
assets/rpg.targ/maps/: 78ee3cef-caf3-47dc-be30-5283544270fe.json  initial.json
assets/test.targ/: app.json  global.json
assets/test.targ/maps/: start.json
src/: characterlayer.cpp  characterlayer.h  imagelayer.cpp  imagelayer.h  main.cpp  node.h  orientation.h  renderer.cpp  renderer.h  sdl2image.h  tile.cpp  tile.h  tilelayer.cpp  tilelayer.h  timer.h  utils.cpp  utils.h
src/AI/: behaviortree.h  composite.h  decorator.h  leaf.h  node.h
src/entity/: component.cpp  component.h  entity.cpp  entity.h  system.h
src/game/: components.cpp  components.h  expressions.h  utils.cpp  utils.h
src/game/behaviors/: follow.cpp  follow.h  promixity.h
src/json/: readjson.h
src/layers/: characterlayer.cpp  characterlayer.h  imagelayer.cpp  imagelayer.h  itemlayer.cpp  itemlayer.h  itemslayer.cpp  itemslayer.h  staticcollisionlayer.cpp  staticcollisionlayer.h  tilelayer.cpp  tilelayer.h
src/physics/: AABB.h  AABBTree.cpp  AABBTree.h  IAABB.h
src/renderer/: compass.h  fourtile.h  interpreter.h  node.h  offset.h  renderer.cpp  renderer.h  simpletile.h  sixtile.h  surrounding.h  tile.h  tileset.h
src/states/: basestate.h  idling.cpp  idling.h  jumping.cpp  jumping.h  running.cpp  running.h
(+20 files in other folders)
